# hello-cmake-fortran

./: CMakeLists.txt  README.md
cmake/: Doxyfile.cmake
source/: CMakeLists.txt  hello.F90  mymath.F90  version.F90  version.F90.cmake
